build/log/idf_py_stdout_output_145203
[1/9] Performing build step for 'bootloader'
[1/1] cd /auto/fsi/ben1457/BYUTD/lab07/build/bootloader/esp-idf/esptool_py && /opt/esp5/python_env/idf5.2_py3.12_env/bin/python /opt/esp5/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /auto/fsi/ben1457/BYUTD/lab07/build/bootloader/bootloader.bin
Bootloader binary size 0x6860 bytes. 0x7a0 bytes (7%) free.
[2/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/opt/esp5/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.2.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/auto/fsi/ben1457/BYUTD/lab07/build/config -I/auto/fsi/ben1457/BYUTD/lab07/main -I/opt/esp5/esp-idf/components/newlib/platform_include -I/opt/esp5/esp-idf/components/freertos/config/include -I/opt/esp5/esp-idf/components/freertos/config/include/freertos -I/opt/esp5/esp-idf/components/freertos/config/xtensa/include -I/opt/esp5/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/opt/esp5/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/opt/esp5/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/opt/esp5/esp-idf/components/freertos/esp_additions/include -I/opt/esp5/esp-idf/components/esp_hw_support/include -I/opt/esp5/esp-idf/components/esp_hw_support/include/soc -I/opt/esp5/esp-idf/components/esp_hw_support/include/soc/esp32 -I/opt/esp5/esp-idf/components/esp_hw_support/port/esp32/. -I/opt/esp5/esp-idf/components/heap/include -I/opt/esp5/esp-idf/components/log/include -I/opt/esp5/esp-idf/components/soc/include -I/opt/esp5/esp-idf/components/soc/esp32 -I/opt/esp5/esp-idf/components/soc/esp32/include -I/opt/esp5/esp-idf/components/hal/platform_port/include -I/opt/esp5/esp-idf/components/hal/esp32/include -I/opt/esp5/esp-idf/components/hal/include -I/opt/esp5/esp-idf/components/esp_rom/include -I/opt/esp5/esp-idf/components/esp_rom/include/esp32 -I/opt/esp5/esp-idf/components/esp_rom/esp32 -I/opt/esp5/esp-idf/components/esp_common/include -I/opt/esp5/esp-idf/components/esp_system/include -I/opt/esp5/esp-idf/components/esp_system/port/soc -I/opt/esp5/esp-idf/components/esp_system/port/include/private -I/opt/esp5/esp-idf/components/xtensa/esp32/include -I/opt/esp5/esp-idf/components/xtensa/include -I/opt/esp5/esp-idf/components/xtensa/deprecated_include -I/opt/esp5/esp-idf/components/esp_timer/include -I/auto/fsi/ben1457/BYUTD/components/config -I/auto/fsi/ben1457/BYUTD/components/lcd -I/auto/fsi/ben1457/BYUTD/components/cursor -I/auto/fsi/ben1457/BYUTD/components/pin -I/auto/fsi/ben1457/BYUTD/components/sound -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -O2 -fmacro-prefix-map=/auto/fsi/ben1457/BYUTD/lab07=. -fmacro-prefix-map=/opt/esp5/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c /auto/fsi/ben1457/BYUTD/lab07/main/main.c
/auto/fsi/ben1457/BYUTD/lab07/main/main.c: In function 'app_main':
/auto/fsi/ben1457/BYUTD/lab07/main/main.c:117:17: error: implicit declaration of function 'draw_course' [-Werror=implicit-function-declaration]
  117 |                 draw_course();
      |                 ^~~~~~~~~~~
cc1: some warnings being treated as errors
[3/9] No install step for 'bootloader'
ninja: build stopped: subcommand failed.
